website/versioned_docs/version-2.2.x/docs/codegen/protobuf-and-grpc.mdx
---
    title: Protobuf and gRPC
    position: 0
---

How to generate Python from Protocol Buffers.

---

When you depend on a `protobuf_library` in a Python target (like a `python_library`), Pants will run the Protoc compiler to generate Python code that you can import and use like normal Python code.
[block:callout]
{
  "type": "info",
  "title": "Example repository",
  "body": "See [the Python example repository](https://github.com/pantsbuild/example-python) for an example of using Protobuf to generate Python."
}
[/block]

[block:callout]
{
  "type": "success",
  "title": "Benefit of Pants: generated files are always up-to-date",
  "body": "With Pants, there's no need to manually regenerate your code. Pants will ensure you are always using up-to-date files in your builds.\n\nThanks to fine-grained caching, Pants will regenerate the minimum amount of code required when you do make changes."
}
[/block]

[block:api-header]
{
  "title": "Step 1: Activate the Protobuf Python backend"
}
[/block]
Add this to your `pants.toml`:
[block:code]
{
  "codes": [
    {
      "code": "[GLOBAL]\nbackend_packages.add = [\n  \"pants.backend.codegen.protobuf.python\",\n  \"pants.backend.python\",\n]",
      "language": "toml",
      "name": "pants.toml"
    }
  ]
}
[/block]
This adds the new `protobuf_library` target, which you can confirm by running `./pants help protobuf_library`.
[block:callout]
{
  "type": "info",
  "title": "Enable the MyPy Protobuf plugin",
  "body": "The [MyPy Protobuf plugin](https://github.com/dropbox/mypy-protobuf) generates [`.pyi` type stubs](https://mypy.readthedocs.io/en/stable/stubs.html). If you use MyPy through Pants's [typecheck goal](doc:python-typecheck-goal), this will ensure MyPy understands your generated code.\n\nTo activate, set `mypy_plugin = true` in the `[python-protobuf]` scope:\n\n```toml\n[python-protobuf]\nmypy_plugin = true\n```\n\nMyPy will use the generated `.pyi` type stub file, rather than looking at the `.py` implementation file."
}
[/block]

[block:callout]
{
  "type": "warning",
  "title": "Want to use other protocols, like Thrift?",
  "body": "Please message us on [Slack](doc:community) if you would like support for more protocols. We would be happy to either add support to the core Pants distribution or to help you to write a plugin."
}
[/block]

[block:api-header]
{
  "title": "Step 2: Set up the `protobuf` and/or `grpcio` runtime libraries"
}
[/block]
Generated Python files require the [`protobuf` library](https://pypi.org/project/protobuf/) for their imports to work properly. If you're using gRPC, you also need the [`grpcio` library](https://pypi.org/project/grpcio/).

First, add `protobuf`—and `grpcio`, if relevant— to your `requirements.txt` (see [Third-party dependencies](doc:python-third-party-dependencies)).
[block:code]
{
  "codes": [
    {
      "code": "grpcio==1.32.0\nprotobuf>=3.12.1",
      "language": "text",
      "name": "requirements.txt"
    }
  ]
}
[/block]
Then, add the targets' addresses to the option `runtime_dependencies` in the `[python-protobuf]` scope. Pants will use this to automatically add the target(s) to the `dependencies` field for every `protobuf_library()` target you write.
[block:code]
{
  "codes": [
    {
      "code": "[python-protobuf]\n# Use the path to your 3rd-party requirements,\n# e.g. `3rdparty/python:protobuf`.\nruntime_dependencies = [\"//:grpcio\", \"//:protobuf\"]",
      "language": "toml",
      "name": "pants.toml"
    }
  ]
}
[/block]

[block:api-header]
{
  "title": "Step 3: Define a `protobuf_library` target"
}
[/block]
Wherever you create your `.proto` files, add a `protobuf_library`.
[block:code]
{
  "codes": [
    {
      "code": "# `sources` defaults to `['*.proto']`.\nprotobuf_library()",
      "language": "python",
      "name": "project/example/BUILD"
    },
    {
      "code": "syntax = \"proto3\";\n\npackage project.example;\n\nmessage Example {\n  ...\n}",
      "language": "text",
      "name": "project/example/f.proto"
    }
  ]
}
[/block]
Pants will use [dependency inference](doc:targets) for any `import` statements in your `.proto` files, which you can confirm by running `./pants dependencies path/to/file.proto`. You can also manually add to the `dependencies` field.

If you want gRPC code generated, set `grpc=True`.
[block:code]
{
  "codes": [
    {
      "code": "protobuf_library(grpc=True)",
      "language": "python",
      "name": "src/proto/example/BUILD"
    }
  ]
}
[/block]

[block:api-header]
{
  "title": "Step 4: Use the `protobuf_library` in your Python code"
}
[/block]
Now, you can import the generated Python module in your Python code. For example, to import `project/example/f.proto`, add `import project.example.f_pb2` to your code.

Pants's dependency inference will detect Python imports of Protobuf modules, which you can confirm by running `./pants dependencies path/to/file.py`.

If gRPC is activated, you can also import the module with `_pb2_grpc` at the end, e.g. `project.example.f_pb2_grpc`.

```python
from project.example.f_pb2 import HelloReply
from project.example.f_pb2_grcp import GreeterServicer
```
[block:callout]
{
  "type": "info",
  "title": "Run `./pants export-codegen ::` to inspect the files",
  "body": "`./pants export-codegen ::` will run all relevant code generators and write the files to `dist/codegen` using the same paths used normally by Pants.\n\nYou do not need to run this goal for codegen to work when using Pants; `export-codegen` is only for external consumption outside of Pants."
}
[/block]

[block:callout]
{
  "type": "warning",
  "title": "You likely need to add empty `__init__.py` files",
  "body": "By default, Pants will generate the Python files in the same directory as the `.proto` file. To get Python imports working properly, you will likely need to add an empty `__init__.py` in the same location, and possibly in ancestor directories. You do not need to add a `python_library()` target; Pants will automatically include the file.\n\nSee the below section \"Protobuf and source roots\" for how to generate into a different directory. If you use this option, you will still likely need an empty `__init__.py` file in the destination directory."
}
[/block]

[block:api-header]
{
  "title": "Protobuf and source roots"
}
[/block]
By default, generated code goes into the same [source root](doc:source-roots) as the `.proto` file from which it was generated. For example, a file `src/proto/example/f.proto` will generate `src/proto/example/f_pb2.py`. 

However this may not always be what you want. In particular, you may not want to have to add `__init__py` files under `src/proto` just so you can import Python code generated to that source root.

You can configure a different source root for generated code by setting the `python_source_root` field:
[block:code]
{
  "codes": [
    {
      "code": "protobuf_library(\n  python_source_root='src/python'\n)",
      "language": "python",
      "name": "src/proto/example/BUILD"
    }
  ]
}
[/block]
Now `src/proto/example/f.proto` will generate `src/python/example/f_pb2.py`, i.e., the generated files will share a source root with your other Python code.
[block:callout]
{
  "type": "info",
  "title": "Set the `.proto` file's `package` relative to the source root",
  "body": "Remember that the `package` directive in your `.proto` file should be relative to the source root. \n\nFor example, if you have a file at `src/proto/example/subdir/f.proto`, you'd set its `package` to `example.subdir`; and in your Python code, `from example.subdir import f_pb2`."
}
[/block]
